# turbonc

./: .gitignore  README.md  __main__.py  jcnc.py  jcnc.ui  pyproject.toml  resources.qrc  setup.py  style.qss
debian/: changelog  control  rules
jcnc/: __init__.py  jcnc.py  jcnc.yml  style.qss
jcnc/ui/: jcnc.ui  window.ui  window_ui.py
linuxcnc/configs/sim.qtpyvcp/: a_file  create_sample_db.py  custom_config.yml  db.sqlite  queries_sample_db.py  sim.var  sim.var.bak  tnc_config.yml  tnc_db.ini  tnc_db_config.yml  tnc_opcua.ini  tool.tbl  tool_db_backend.py  tool_db_program.py  turbo_db.py  xyz-metric.ini  xyz.ini
linuxcnc/configs/sim.qtpyvcp/3D/tools/: drewtronics.stl
linuxcnc/configs/sim.qtpyvcp/comp/: api_server.py
linuxcnc/configs/sim.qtpyvcp/db_tool/: tool_table.py
linuxcnc/configs/sim.qtpyvcp/hallib/: comps.hal  postgui.hal
linuxcnc/configs/sim.qtpyvcp/tool_db/: base.py  tbl2sql.py
linuxcnc/nc_files/qtpyvcp/: qtpyvcp_logo.ngc
resources/: jcnc_rc.py  style.qss
src/tnc/: __init__.py  _version.py  config.yml  main.py  menubar.yml  style.qss
src/tnc/dialogs/: about_turbonc.py  home_all.py  home_all_ui.py  zero_xy.py  zero_xy_ui.py
src/tnc/ui/: window.ui  window_ui.py
tnc/: __init__.py  config.yml  main.py  menubar.yml  resources.qrc  resources_rc.py  style.qss
tnc/dialogs/: home_all.py  home_all_ui.py  zero_xy.py  zero_xy.ui  zero_xy_ui.py
tnc/ui/: window.ui  window_ui.py
ui/: jcnc.ui
varios/: Steampunk Textures.rar
varios/Steampunk Textures/: steampunksimpleborderwide.tga
