[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "turbonc"
version = "0.0"
authors = [
  "TurBoss <j.l.toledano.l@gmail.com>"
]
description = "TurBo NC - A QtPyVCP based Virtual Control Panel for LinuxCNC"
readme = "README.md"

packages = [
    { include = "tnc", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.scripts]
tnc = "tnc:main"

[tool.poetry.plugins]

[tool.poetry.plugins."qtpyvcp.vcp"]
tnc = "tnc"

[tool.poetry.plugins."qtpyvcp.widgets"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "^(?P<base>\\d+\\.\\d+)?"
